wip: delete Role in Authentication